chore: font size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>E-Lab</title>
 </head>
 
-<body>
+<body class='text-sm'>
   <div id="app"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
